syntax="proto3";

enum MsgType {
    Login = 0;
    Room = 1;
    Combat = 2;
}

enum MsgCmd {
    // 登录
    Login_LoginReq = 0;
    Login_LoginResp = 1;

    // 查询房间列表
    Room_QueryListReq = 2;
    Room_QueryListResp = 3;
    // 进入房间
    Room_GetInReq = 4;
    Room_GetInResp = 5;
    // 房间开始游戏
    Room_StartGameReq = 6;
    Room_StartGameResp = 7;

    // 攻击
    Combat_AttackReq = 8;
    Combat_AttackResp = 9;
}